testsuite/tests/properties/invalid_lazy_field/inconsistent_base_1/test.lkt
from common import Number

class FooNode implements Node[FooNode] {
    @exported fun p(): Int = 1
}

class Example: FooNode {
    @exported @lazy p: Int = 2
}
